--- a/sexualhealth.css
+++ b/sexualhealth.css
@@ -10,7 +10,7 @@ p {
 }
 
 body {
-	background-image: url(https://s-media-cache-ak0.pinimg.com/564x/f0/b9/52/f0b9523dacbecc5bd4e2aae496a9c8c2.jpg);
+	background-image: url(https://testdrive-archive.azurewebsites.net/performance/chalkboard/Images/EmptyChalkboard.svg);
 	background-size:cover
 }
 
