--- a/sexualhealth.css
+++ b/sexualhealth.css
@@ -10,7 +10,7 @@ p {
 }
 
 body {
-	background-image: url(https://testdrive-archive.azurewebsites.net/performance/chalkboard/Images/EmptyChalkboard.svg);
+	background-image: url(http://2.bp.blogspot.com/-yfR-QZl3Po0/VMbK8OOz5OI/AAAAAAAAAu8/CdDwo9XPFhw/s1600/cork.png);
 	background-size:cover
 }
 
