--- a/project.css
+++ b/project.css
@@ -1,10 +1,6 @@
 body {
-	background-image: url("images/pinboard.jpg");
+	background-image: <img src="images/pinboard.jpg">;
 }
-
-
-
-
 
 .top {
 	border-left: none;
