--- a/sexualhealth.css
+++ b/sexualhealth.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 p {
-	color: blue;
+	color: rgb22, 45, 34);
 	font-family: Helvetica
 	font-size: 16px;
 }
@@ -34,4 +34,7 @@ img {
 	padding: 10px;
 	display: block;
 	margin: 0 auto;
+}
+
+.top {
 }
