--- a/project.css
+++ b/project.css
@@ -1,5 +1,6 @@
 body {
-	background-image: <img src="images/pinboard.jpg">;
+      background-image: url("images/pinboard.png");
+      background-size: cover;
 }
 
 .top {
