--- a/project.css
+++ b/project.css
@@ -1,14 +1,9 @@
 body {
       background-image: url("images/pinboard.png");
       background-size: cover;
+      background-repeat: repeat;
 }
 
-
-
-
-
-.top {
-	border-left: none;
 }
 .first {
 	background-color: rgba(0,255,0,0.3);
