--- a/project.css
+++ b/project.css
@@ -3,10 +3,22 @@ body {
       background-image: url("images/pinboard.png");
       background-size: cover;
 }
-
-
-
-
+.col1 {
+	background-image: url("images/blue-postit.png");
+	background-size: cover;
+	height: 350px;
+	width: auto;
+}
+.col2 {
+	background-image: url("images/piles.png");
+	background-size: cover;
+	height: 350px;
+}
+.col3 {
+	background-image: url("images/yellow.png");
+	background-size: cover;
+	height: 350px;
+}
 
 .top {
 	border-left: none;
