suggested nav bar changes

--- a/project.css
+++ b/project.css
@@ -1,9 +1,14 @@
 body {
-	background-image: url("images/pinboard.gif");
-      background-image: url("images/pinboard.png");
-      background-size: cover;
-      background-repeat: repeat;
+    background-image: url("images/pinboard.png");
+    background-size: cover;
+    background-repeat: repeat;
 }
+
+ img { 
+ 	border-radius: 5px;
+    border: 100px solid #fcfac9;
+    padding: 20px;    
+      }
 
 }
 .first {
@@ -18,3 +23,4 @@ body {
 	background-color: rgba(255,0,0,0.3);
 	color: black;
 }
+
