--- a/project.css
+++ b/project.css
@@ -2,6 +2,7 @@ body {
     background-image: url("images/pinboard.png");
     background-size: cover;
     background-repeat: repeat;
+    font-family: "Gloria Hallelujah", cursive;
 }
 .col1 {
 	background-image: url("images/pink-postit.png");
