--- a/project.css
+++ b/project.css
@@ -1,3 +1,14 @@
+
+<head>
+    <link rel="stylesheet" type="text/css" href="project.css">
+    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+</head>
+
+
 body {
     background-image: url("images/pinboard.png");
     background-size: cover;
