--- a/project.css
+++ b/project.css
@@ -2,7 +2,7 @@ body {
     background-image: url("images/pinboard.png");
     background-size: cover;
     background-repeat: repeat;
-    font-family: "Gloria Hallelujah", cursive;
+    font-family: 'Gloria Hallelujah', cursive;
     }
 
 h1 {
