--- a/project.css
+++ b/project.css
@@ -5,6 +5,12 @@ body {
     font-family: 'Gloria Hallelujah', cursive;
     }
 
+img { 
+    border-radius: 20px;
+    border: 5px solid black;
+    padding: 0px;  
+      }
+
 h1 {
    text-align: center;
 }
@@ -23,12 +29,7 @@ h1 {
 	background-image: url("images/yellow.png");
 	background-size: contain;
 	height: 386px;
-}
- img { 
- 	border-radius: 5px;
-    border: 100px solid #fcfac9;
-    padding: 20px;    
-}
+} 
 .top {
 	border-left: none;
 }
