--- a/project.css
+++ b/project.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Gloria Hallelujah', cursive;
     }
 
-img { 
+#img-border{
     border-radius: 20px;
     border: 5px solid black;
     padding: 0px;  
