--- a/project.css
+++ b/project.css
@@ -36,3 +36,9 @@ h1 {
 	background-color: rgba(255,0,0,0.3);
 	color: black;
 }
+
+#imgborder {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
