--- a/project.css
+++ b/project.css
@@ -16,6 +16,24 @@ body {
 	font-size: 200px;
 }
 
+#photo{
+    height:200px;
+    width: 200px;
+    border-radius: 20px;
+    border: 5px solid red;
+    padding: 0px;
+}
+
+#label{
+    text-align: center;
+    color: red;
+}
+
+.about{
+    background-color: black;
+    color: white;
+}
+
 h1 {
    text-align: center;
 }
