--- a/project.css
+++ b/project.css
@@ -13,7 +13,13 @@ body {
 
 #index-head{
 	font-family: 'Monofett', cursive;
-	font-size: 200px;
+	font-size: 170px;
+  margin: 0px;
+}
+
+.strapline {
+  text-align: center;
+  margin: 0px; 
 }
 
 #photo{
