--- a/project.css
+++ b/project.css
@@ -181,11 +181,11 @@ p {
 
 #signup {
 	font-size: 200%;
-=======
+}
+
 #index-caption {
 	 position: absolute;
     top: 30%;
     left: 0;
     width: 100%;
->>>>>>> origin/master
 }
