--- a/project.css
+++ b/project.css
@@ -99,15 +99,14 @@ h1 {
 .postit {
 	font-size: 70px;
 }
-<<<<<<< HEAD
 
-.pagenames {
+.postit {
 	color: black;
 	text-decoration: none;
 }
 
 
-.pagenames:hover {
+.postit:hover {
     color: white;
     text-decoration: none;
 }
