--- a/project.css
+++ b/project.css
@@ -44,11 +44,6 @@ body {
   padding: 10px;
 }
 
-#social-buttons {
-    text-align: center;
-    padding: 10px;
-}
-
 .show-description {
     opacity: 1;
 }
@@ -111,39 +106,27 @@ h1 {
     text-decoration: none;
 }
 
-.btn-twitter {
-    background-color: rgb(86, 151, 255);
+#social-buttons {
+    text-align: center;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
 }
 
+.btn-twitter {
+    background-color: rgb(86, 151, 255);
+  }
+
 .btn-facebook {
     background-color: rgb(24, 69, 142);
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-
 }
 
 .btn-pinterest {
     background-color: rgb(226, 18, 28);
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-
 }
 
 input[type=text] {
@@ -187,4 +170,12 @@ p {
     top: 30%;
     left: 0;
     width: 100%;
+}
+
+.large {
+  font-size: 30px;
+}
+
+.navbar {
+    margin-bottom: 0;
 }
