--- a/project.css
+++ b/project.css
@@ -38,9 +38,9 @@ body {
 .about{
   color: rgba(255,255,255,1);
   background: black;
-  background: linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.3));
-  background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.3));
-  background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.3));
+  background: linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.5));
+  background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.5));
+  background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.5));
   padding: 0px;
 }
 
@@ -191,6 +191,7 @@ p {
 }
 .large {
   font-size: 30px;
+  background-color: black;
 }
 
 .navbar {
@@ -215,3 +216,26 @@ p {
 	top: 0px;
 	padding: 40px 30px 20px 47px;
 }
+
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+        width: 70%;
+        margin: auto;
+     }
+
+     .item {
+        height: 500px;
+        width: 500px; 
+        margin: 0 auto;             
+     }
+
+    .carousel {
+        height: 500px;
+        width: 500px;
+    }
+
+    .carousel-caption {
+        color: red;
+        font-family: 'Gloria Hallelujah', cursive;
+        font-size: 40px;
+    }
