--- a/project.css
+++ b/project.css
@@ -84,13 +84,26 @@ h1 {
     border: none;
 }
 
-#paragr1-caption{
+#par1-caption{
     position: absolute;
     top: 10px;
     left: 0;
     width: 100%;
 }
-
+#par3-caption {
+	position: absolute;
+    padding: 5px 26px 5px 26px;
+    top: 0px;
+    font-size: 20px;
+}
+#par2-caption {
+	position: absolute;
+	padding: 5px 26px 5px 26px;
+	top: 0px;
+}
+.fontpar1 {
+	font-size: 20px;
+}
 .postit {
 	font-size: 70px;
 	color: black;
@@ -183,12 +196,7 @@ p {
  color: white;
  text-decoration: none;
 }
-#par3-caption {
-	position: absolute;
-    padding: 5px 26px 5px 26px;
-    top: 0px;
-    font-size: 20px;
-}
+
 .large {
   font-size: 30px;
   background-color: black;
