--- a/project.css
+++ b/project.css
@@ -44,8 +44,13 @@ body {
   padding: 0px;
 }
 
+.about-title {
+  margin: 20px;
+}
+
 .show-description {
     opacity: 1;
+    height:100%
 }
 
 .hidden{
