--- a/project.css
+++ b/project.css
@@ -123,6 +123,15 @@ h1 {
 .text5 {
 	width: 345px;
 }
+.text6 {
+	width: 340px;
+}
+.text7 {
+	width: 337px;
+}
+.text8 {
+	width: 350px;
+}
 #par2-caption {
 	position: absolute;
 	width: 88%;
